<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/save"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/action_save"
        android:orderInCategory="100"
        app:showAsAction = "never"/>
    <item
        android:id="@+id/action_abort"
        android:icon="@android:drawable/ic_menu_rotate"
        android:title="@string/action_abort"
        android:orderInCategory="100"
        app:showAsAction = "never"/>


    <item
        android:id="@+id/action_share"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/action_share"
        android:orderInCategory="100"
        app:showAsAction = "never"/>

    <item
        android:id="@+id/action_camera"
        android:icon="@android:drawable/ic_menu_camera"
        android:title="@string/action_camera"
        android:orderInCategory="100"
        app:showAsAction = "never"/>

    <item
        android:id="@+id/action_clear_camera"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/action_clear_camera"
        android:orderInCategory="100"
        app:showAsAction = "never"/>

    <item
        android:id="@+id/action_location"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/action_geo"
        android:orderInCategory="100"
        app:showAsAction = "never"/>

    <item
        android:id="@+id/action_location_map"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:title="@string/action_geo_map"
        android:orderInCategory="100"
        app:showAsAction = "never"/>

    <item
        android:id="@+id/action_save_txt"
        android:title="@string/action_save_txt"
        android:orderInCategory="100"
        app:showAsAction = "never"/>






</menu>